<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/dimen43"
    android:background="@drawable/bg_titlebar" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:padding="@dimen/dimen5"
        android:text="@string/btn_back"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_add"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:padding="@dimen/dimen5"
        android:text="@string/btn_add"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_upload"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:padding="@dimen/dimen5"
        android:text="@string/tv_upload"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/tv_clear"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:padding="@dimen/dimen5"
        android:text="@string/tv_clear"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />
    
    
    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:padding="@dimen/dimen5"
        android:text="@string/btn_save"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />

</RelativeLayout>