<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen5"
    android:orientation="horizontal" >

    <AutoCompleteTextView
        android:id="@+id/searchkey_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen5"
        android:layout_weight="3"
        android:completionThreshold="1"
        android:hint="@string/searchkey_color"
        android:lines="1"
        android:singleLine="true" />

    <AutoCompleteTextView
        android:id="@+id/searchkey_sizes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen5"
        android:layout_weight="2"
        android:completionThreshold="1"
        android:hint="@string/searchkey_color_1"
        android:lines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_sl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen5"
        android:layout_weight="2"
        android:hint="@string/tv_amount"
        android:inputType="number"
        android:lines="1"
        android:singleLine="true" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen5"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/tv_add"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/tv_del"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>