<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/text_color_white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen5" >

        <TextView
            android:id="@+id/tv_createdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen5"
            android:layout_weight="1"
            android:text="@string/tv_createdate"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_lastupdatedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/tv_lastupdatedate"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen5" >

        <TextView
            android:id="@+id/tv_vendors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen5"
            android:layout_weight="1"
            android:lines="1"
            android:ellipsize="end"
            android:text="@string/tv_purchase"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/tv_state"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_photo_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/tv_photo_upload"
            android:textColor="@color/blue"
            android:textSize="13sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/ll_sizeinfos"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        
    </LinearLayout>

</LinearLayout>