<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/text_color_white"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/et_item_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen1"
        android:layout_weight="1"
        android:hint="@string/edit_colors_v2"
        android:imeOptions="actionNext"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_item_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen1"
        android:layout_weight="1"
        android:hint="@string/edit_sizes_v2"
        android:imeOptions="actionNext"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_item_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen1"
        android:layout_weight="1"
        android:hint="@string/edit_sl"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tv_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen1"
        android:gravity="center"
        android:padding="@dimen/dimen5"
        android:text="刪除"
        android:textColor="@color/color_black"
        android:textSize="14sp" />

</LinearLayout>