<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_style_alert_dialog_background"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/btn_show"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen5"
            android:background="@drawable/btn_style_alert_dialog_button"
            android:text="@string/menu_show"
            android:visibility="gone"
            android:textStyle="bold" />
        

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen5"
            android:background="@drawable/btn_style_alert_dialog_button"
            android:text="@string/menu_photo"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen5"
            android:background="@drawable/btn_style_alert_dialog_button"
            android:text="@string/menu_pick_photo"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen14"
            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"
            android:layout_marginTop="@dimen/dimen14"
            android:background="@drawable/btn_style_alert_dialog_cancel"
            android:text="@string/menu_cancel"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>