<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <LinearLayout
        android:id="@+id/linearLayout_focus"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen5"
                android:ems="10"
                android:hint="@string/editText_phone_hint"
                android:inputType="phone"
                android:lines="1"
                android:singleLine="true" >
            </EditText>

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen5"
                android:ems="10"
                android:hint="@string/editText_name_hint"
                android:lines="1"
                android:singleLine="true" >
            </EditText>

            <EditText
                android:id="@+id/editText_userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen5"
                android:ems="10"
                android:hint="@string/error_register_password_null"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true" >
            </EditText>

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen3"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:text="@string/button_submit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>